# anonymous-credentials

./: .dockerignore  .gitignore  .gitmodules  .npmignore  CMakeLists.txt  CURVE  Dockerfile  Dockerfile.coretests  Dockerfile.emscripten  Makefile  README.md  addon.c  binding.gyp  build-bundle.sh  build-common.sh  build-emscripten-debug.sh  build-emscripten.sh  build-native-debug.sh  build-native.sh  build.sh  build2.sh  clean.sh  config.common  config.debug  config.debug-address-sanitizer  config.debug-undefined-sanitizer  config.default  config.release  docker-compose.yaml  group-sign-bindings.c  group-sign-manager.js  group-sign.c  group-sign.h  group-signer.js  groupsign_napi.c  node.install  package-lock.json  package.json  pre.js  run-core-tests.sh  (+3 more)
.github/workflows/: ci.yml
core/: CMakeLists.txt  curve-specific.h  group-sign.c  group-sign.h  group-sign_ZZZ.c.in  group-sign_ZZZ.h.in
core/src/: CMakeLists.txt  group-sign.c  group-sign.h  group-sign_ZZZ.c.in  group-sign_ZZZ.h.in
core/test/: CMakeLists.txt  example.c  hallo_world_test.c  hallo_world_test.cpp
deploy/packer/: authorized_keys  build.sh  cleanup-old-amis.py  common_vars.json  common_vars_primary.json  common_vars_prod.json  common_vars_test.json
deploy/packer/groupsign/: groupsign-exporter-shutdown-hook.service  groupsign-exporter.service  groupsign-exporter.sh  groupsign-exporter.timer  groupsign.service  packer.json  packer_init_commands.sh  prepare-deploy-local.sh
deploy/terraform/live/dev/: terraform.tfvars
deploy/terraform/live/dev-philipp/: terraform.tfvars
deploy/terraform/live/dev-philipp/data/groupsign-redis/: main.tf  output.tf
deploy/terraform/live/dev-philipp/services/groupsign/: ami.tf  main.tf  terraform.tfvars
deploy/terraform/live/dev/data/groupsign-redis/: main.tf  terraform.tfvars
deploy/terraform/live/dev/services/groupsign/: ami.tf  ami.tf.template  main.tf  terraform.tfvars
deploy/terraform/live/prod/: terraform.tfvars
deploy/terraform/live/prod/data/groupsign-redis/: main.tf  variables.tf
deploy/terraform/live/prod/services/groupsign/: ami.tf  ami.tf.template  main.tf  output.tf
deploy/terraform/modules/groupsign/: main.tf  output.tf  user-data.sh  variables.tf
deploy/terraform/modules/groupsign-redis/: main.tf  output.tf  variables.tf
docker-helpers/: extract-files-from-image.sh
group-sign/: CMakeLists.txt
group-sign/src/: group-sign.c
lib/: asmjs.js  common.js  index.js  native.js  util.js  wasm.js  web.js
tests/: bench.js  test.c  test2.js  tests.js
